dev/alb-gateway.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io: '{"Type": "redirect", "RedirectConfig":
      {  "Port": "443", "StatusCode": "HTTP_301"}}'
    
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internal
    
  name: istio-frb-alb
  namespace: istio-system
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:      
      - backend:
          service:
            name: bookinfo-gateway
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
